create link between pages for show

--- a/src/catalog-section.html
+++ b/src/catalog-section.html
@@ -18,7 +18,7 @@
             <div class="products__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
-                     <li><a href="#">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
+                     <li><a href="/index.html">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Каталог</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Промышленные прямоугольные разъёмы</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><span>Комплекты промышленных разъёмов</span></li>
