--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -22,7 +22,7 @@
             <nav class="header__nav-pages">
                <ul class="header__nav-list">
                   <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">О компании</a>
+                     <a href="/about.html" class="header__nav-link">О компании</a>
                   </li>
                   <li class="header__nav-item">
                      <a href="#" class="header__nav-link">
@@ -30,8 +30,8 @@
                         <img src="@img/icons/arrow-down.svg" alt="список покупателям">
                      </a>
                      <ul class="header__submenu">
-                        <li><a href="#">Юридическим лицам</a></li>
-                        <li><a href="#">Физическим лицам</a></li>
+                        <li><a href="/questions.html">Юридическим лицам</a></li>
+                        <li><a href="/questions.html">Физическим лицам</a></li>
                      </ul>
                   </li>
                   <li class="header__nav-item">
@@ -40,10 +40,10 @@
                         <img src="@img/icons/arrow-down.svg" alt="список полезное">
                      </a>
                      <ul class="header__submenu">
-                        <li><a href="#">Документация</a></li>
-                        <li><a href="#">Статьи</a></li>
-                        <li><a href="#">Новости</a></li>
-                        <li><a href="#">Бренды</a></li>
+                        <li><a href="/documentation.html">Документация</a></li>
+                        <li><a href="/articles.html">Статьи</a></li>
+                        <li><a href="/news-page.html">Новости</a></li>
+                        <li><a href="/producer.html">Бренды</a></li>
                      </ul>
                   </li>
                   <li class="header__nav-item">
@@ -56,7 +56,7 @@
                      </ul>
                   </li>
                   <li class="header__nav-item">
-                     <a href="#" class="header__nav-link">Контакты</a>
+                     <a href="/contacts.html" class="header__nav-link">Контакты</a>
                   </li>
                </ul>
             </nav>
@@ -66,7 +66,7 @@
    <div class="header__bottom">
       <div class="header__container container">
          <div class="header__bottom-wrapper">
-            <a href="#" class="header__logo-link">
+            <a href="/index.html" class="header__logo-link">
                <img src="@img/icons/logo.svg" alt="логотип" class="header__logo">
             </a>
             <div class="header__search-wrapper">
@@ -279,42 +279,42 @@
                               <div class="catalogue__row">
                                  <h3 class="catalogue__title">Контактные вставки</h3>
                                  <ul class="catalogue__category-grid">
-                                    <li><a href="#">Серия НА</a><span>24</span>
+                                    <li><a href="/product-desc.html">Серия НА</a><span>24</span>
                                        <ul>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                          <li><a href="/product-desc.html">Полукомплекты на основеконтактных вставок
                                                 HA-003</a><span>15</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                          <li><a href="/product-desc.html">Полукомплекты на основеконтактных вставок
                                                 HA-004</a><span>15</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                          <li><a href="/product-desc.html">Полукомплекты на основеконтактных вставок
                                                 HA-010</a><span>4</span></li>
-                                          <li><a href="#">Полукомплекты на основеконтактных вставок
+                                          <li><a href="/product-desc.html">Полукомплекты на основеконтактных вставок
                                                 HA-016</a><span>3</span></li>
                                        </ul>
                                     </li>
-                                    <li><a href="#">Серия НE</a><span>60</span>
+                                    <li><a href="/product-desc.html">Серия НE</a><span>60</span>
                                        <ul>
-                                          <li><a href="#">серия</a><span>9</span></li>
-                                          <li><a href="#">серия</a><span>2</span></li>
-                                          <li><a href="#">серия</a><span>4</span></li>
-                                          <li><a href="#">серия</a><span>13</span></li>
+                                          <li><a href="/product-desc.html">серия</a><span>9</span></li>
+                                          <li><a href="/product-desc.html">серия</a><span>2</span></li>
+                                          <li><a href="/product-desc.html">серия</a><span>4</span></li>
+                                          <li><a href="/product-desc.html">серия</a><span>13</span></li>
                                        </ul>
                                     </li>
-                                    <li><a href="#">Серия НD</a><span>18</span>
+                                    <li><a href="/product-desc.html">Серия НD</a><span>18</span>
                                        <ul>
-                                          <li><a href="#">hd серия</a><span>33</span></li>
-                                          <li><a href="#">hd серия</a><span>9</span></li>
-                                          <li><a href="#">hd серия</a><span>8</span></li>
-                                          <li><a href="#">hd серия</a><span>11</span></li>
-                                          <li><a href="#">hd серия</a><span>12</span></li>
+                                          <li><a href="/product-desc.html">hd серия</a><span>33</span></li>
+                                          <li><a href="/product-desc.html">hd серия</a><span>9</span></li>
+                                          <li><a href="/product-desc.html">hd серия</a><span>8</span></li>
+                                          <li><a href="/product-desc.html">hd серия</a><span>11</span></li>
+                                          <li><a href="/product-desc.html">hd серия</a><span>12</span></li>
                                        </ul>
                                     </li>
-                                    <li><a href="#">Серия НDD</a><span>16</span></li>
-                                    <li><a href="#">Серия НEAV</a><span>2</span></li>
-                                    <li><a href="#">Серия НEE</a><span>20</span></li>
-                                    <li><a href="#">Серия НK</a><span>26</span></li>
-                                    <li><a href="#">Серия НM</a><span>83</span></li>
-                                    <li><a href="#">Серия НQ</a><span>15</span></li>
-                                    <li><a href="#">Серия НSB</a><span>10</span></li>
+                                    <li><a href="/product-desc.html">Серия НDD</a><span>16</span></li>
+                                    <li><a href="/product-desc.html">Серия НEAV</a><span>2</span></li>
+                                    <li><a href="/product-desc.html">Серия НEE</a><span>20</span></li>
+                                    <li><a href="/product-desc.html">Серия НK</a><span>26</span></li>
+                                    <li><a href="/product-desc.html">Серия НM</a><span>83</span></li>
+                                    <li><a href="/product-desc.html">Серия НQ</a><span>15</span></li>
+                                    <li><a href="/product-desc.html">Серия НSB</a><span>10</span></li>
                                  </ul>
                               </div>
                               <div class="catalogue__row">
@@ -431,7 +431,7 @@
                   </li>
                   <li class="header__actions-item">
                      <span style="display: none">5</span>
-                     <a href="#">
+                     <a href="/basket.html">
                         <img src="@img/icons/cart.svg" alt="Корзина">
                         <span>Корзина</span>
                      </a>
