--- a/src/html/_headerMobile.htm
+++ b/src/html/_headerMobile.htm
@@ -101,20 +101,20 @@
       <ul class="mobile__actions-list">
          <li class="mobile__actions-item">
             <span style="display: none">5</span>
-            <a href="#">
+            <a href="/index.html">
                <img src="@img/icons/home.svg" alt="Главная">
                <span>Главная</span>
             </a>
          </li>
          <li class="mobile__actions-item">
-            <a href="#">
+            <a href="/product-desc.html">
                <img src="@img/icons/catalog-black.svg" alt="Каталог">
                <span>Каталог</span>
             </a>
          </li>
          <li class="mobile__actions-item">
             <span style="display: none">5</span>
-            <a href="#">
+            <a href="/basket.html">
                <img src="@img/icons/cart.svg" alt="Корзина">
                <span>Корзина</span>
             </a>
@@ -164,18 +164,18 @@
          </div>
          <h3>Информация</h3>
          <ul class="mobile__side-list">
-            <li><a href="#" data-link="close">О компании</a></li>
-            <li><a href="#" data-link="close">Новости</a></li>
-            <li><a href="#" data-link="close">Документация</a></li>
-            <li><a href="#" data-link="close">Статьи</a></li>
-            <li><a href="#" data-link="close">Бренды</a></li>
+            <li><a href="/about.html" data-link="close">О компании</a></li>
+            <li><a href="/news.html" data-link="close">Новости</a></li>
+            <li><a href="/documentation.html" data-link="close">Документация</a></li>
+            <li><a href="/articles.html" data-link="close">Статьи</a></li>
+            <li><a href="/producer.html" data-link="close">Бренды</a></li>
          </ul>
          <h3>Покупателям</h3>
          <ul class="mobile__side-list">
             <li><a href="#" data-link="close">Юридическим лицам</a></li>
             <li><a href="#" data-link="close">Физическим лицам</a></li>
             <li><a href="#" data-link="close">Обратная связь</a></li>
-            <li><a href="#" data-link="close">Контакты</a></li>
+            <li><a href="/contacts.html" data-link="close">Контакты</a></li>
             <li><a href="#" data-link="close">Публичная оферта</a></li>
          </ul>
       </div>
