--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
                            </p>
                         </p>
                      </div>
-                     <a href="#">Узнать больше</a>
+                     <a href="/about.html">Узнать больше</a>
                   </div>
                </div>
             </div>
@@ -267,7 +267,7 @@
                                  <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
                                  <p>Выставка состоится 6-9 июня 2024 года в Экспоцентрег. Москва</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="/news-page.html">Подробнее</a>
                            </div>
                         </div>
                         <div class="swiper-slide news__item">
@@ -279,7 +279,7 @@
                                  <h5>Haoke Electrical (ZJHK) на выставке ЭЛЕКТРО-2023</h5>
                                  <p>Выставка состоится 6–9 июня 2023 года в Экспоцентре</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="/news-page.html">Подробнее</a>
                            </div>
                         </div>
                         <div class="swiper-slide news__item">
@@ -291,7 +291,7 @@
                                  <h5>Заключили новые контрактыс поставщиками</h5>
                                  <p>Наш каталог пополнен новыми товарами</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="/news-page.html">Подробнее</a>
                            </div>
                         </div>
                         <div class="swiper-slide news__item">
@@ -303,7 +303,7 @@
                                  <h5>Участие ООО «КевТек» в выставке ЭЛЕКТРО-2024</h5>
                                  <p>Выставка состоится 6-9 июня 2024 года в Экспоцентрег. Москва</p>
                               </div>
-                              <a href="#">Подробнее</a>
+                              <a href="/news-page.html">Подробнее</a>
                            </div>
                         </div>
                         <div class="swiper-slide news__item">
@@ -344,7 +344,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -356,7 +356,7 @@
                                  <h5>Типы клемм в контактных вставках</h5>
                                  <p>Контактные вставки и способы присоединения проводников к контактам</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -369,7 +369,7 @@
                                  </h5>
                                  <p>Совместимость компонентов разъёма по типоразмеру</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -381,7 +381,7 @@
                                  <h5>Типы клемм в контактных вставках</h5>
                                  <p>Контактные вставки и способы присоединения проводников к контактам</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
                         <div class="swiper articles__item">
@@ -393,7 +393,7 @@
                                  <h5>Информация о сальниках (кабельных вводах)</h5>
                                  <p>Основная информация о типах сальников и их назначении</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
                         <div class="swiper-slide articles__item">
@@ -406,7 +406,7 @@
                                  </h5>
                                  <p>Совместимость компонентов разъёма по типоразмеру</p>
                               </div>
-                              <a href="#">Читать</a>
+                              <a href="/articles.html">Читать</a>
                            </div>
                         </div>
 
@@ -437,7 +437,7 @@
                                  <p>Корпусы и кожухи прямоугольных промышленных разъёмов
                                     3A, 10A, 16A, 32A</p>
                               </div>
-                              <a href="#">Скачать</a>
+                              <a href="/documentation.html">Скачать</a>
                            </div>
                         </div>
                         <div class="swiper-slide documents__item">
@@ -449,7 +449,7 @@
                                  <h5>Серия НА</h5>
                                  <p>Компактные контактные вставки промышленных разъемов 3A, 10A, 16A, 32A </p>
                               </div>
-                              <a href="#">Скачать</a>
+                              <a href="/documentation.html">Скачать</a>
                            </div>
                         </div>
 
@@ -510,22 +510,22 @@
                   <div class="swiper brands-slider">
                      <div class="swiper-wrapper brand">
                         <div class="swiper-slide brand">
-                           <a href="#" class="brands__slider-item">
+                           <a href="producer.html" class="brands__slider-item">
                               <img src='@img/icons/partner-logo.png' alt="брэнд">
                            </a>
                         </div>
                         <div class="swiper-slide brand">
-                           <a href="#" class="brands__slider-item">
+                           <a href="producer.html" class="brands__slider-item">
                               <img src="./img/icons/logo.svg" alt="брэнд">
                            </a>
                         </div>
                         <div class="swiper-slide brand">
-                           <a href="#" class="brands__slider-item">
+                           <a href="producer.html" class="brands__slider-item">
                               <img src="./img/icons/partner-logo.png" alt="брэнд">
                            </a>
                         </div>
                         <div class="swiper-slide brand">
-                           <a href="#" class="brands__slider-item">
+                           <a href="producer.html" class="brands__slider-item">
                               <img src="./img/icons/partner-logo.png" alt="брэнд">
                            </a>
                         </div>
