--- a/src/producer.html
+++ b/src/producer.html
@@ -18,7 +18,7 @@
             <div class="producer__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
-                     <li><a href="#">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
+                     <li><a href="/index.html">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Бренды</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><span>Производитель ZJHK</span></li>
                   </ul>
