--- a/src/questions.html
+++ b/src/questions.html
@@ -18,7 +18,7 @@
             <div class="questions__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
-                     <li><a href="#">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
+                     <li><a href="/index.html">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><span>Вопрос-Ответ</span></li>
                   </ul>
                </div>
