--- a/src/news-page.html
+++ b/src/news-page.html
@@ -18,7 +18,7 @@
             <div class="news-page__container container">
                <div class="breadcrumbs">
                   <ul class="breadcrumbs__list">
-                     <li><a href="#">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
+                     <li><a href="/index.html">Главная</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><a href="#">Новости</a><img src="./img/icons/arrow-right.svg" alt="стрелка"></li>
                      <li><span>Haoke Electrical (ZJHK) на выставке ЭЛЕКТРО-2023</span></li>
                   </ul>
