Create order change

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./styles/index.css">
-   <script src="https://api-maps.yandex.ru/2.1/?apikey=082d4016-2253-4666-acca-0ffc03b9287b&lang=en_US"
+   <script defer src="https://api-maps.yandex.ru/2.1/?apikey=082d4016-2253-4666-acca-0ffc03b9287b&lang=en_US"
       type="text/javascript">
       </script>
    <script defer src="js/index.js"></script>
